--- a/css/styles.css
+++ b/css/styles.css
@@ -261,3 +261,73 @@ footer {
     background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(210, 45, 151, 0.75), rgba(0, 0, 0, 0));
     margin: 40px 0;
 }
+
+/* Estilos para la paginación */
+.pagination .page-item.active .page-link {
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+    color: var(--text-color);
+    font-weight: bold;
+}
+
+.pagination .page-link {
+    color: var(--text-color);
+    font-weight: bold;
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+}
+
+.pagination .page-link:hover {
+    color: var(--accent-color);
+    background-color: var(--primary-color);
+}
+/* Estilo para la sección "Sobre Nosotros" */
+.sobre-nosotros {
+    background-color: var(--light-color);
+    padding: 60px 0;
+}
+
+.img-container {
+    position: relative;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: var(--secondary-color); /* Fondo detrás de la imagen */
+}
+
+.img-fluid {
+    border-radius: 15px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    max-width: 90%;
+    height: auto;
+    display: block;
+}
+
+.titulo-nosotros {
+    font-family: 'Roboto', sans-serif;
+    font-size: 2.5em;
+    font-weight: 700;
+    color: var(--primary-color);
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+.texto-nosotros {
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.1em;
+    line-height: 1.8;
+    color: var(--dark-color);
+    text-align: left;
+    margin-top: 20px;
+}
+
+/* Ajustes responsivos */
+@media (max-width: 767px) {
+    .titulo-nosotros {
+        font-size: 2em;
+    }
+
+    .texto-nosotros {
+        font-size: 1em;
+    }
+}
