--- a/css/styles.css
+++ b/css/styles.css
@@ -39,10 +39,12 @@ header, .navbar, .nav, .banner, .container-fluid {
 }
 
 .logo {
-    width: 100px; 
-    height: auto;
-    margin-bottom: 10px; 
+    width: 120px;
+    box-shadow: 0px 0px 8px 0.8px rgba(255, 255, 255, 0.2);
+    border-radius: 50%;
+    filter: brightness(150%) contrast(150%);
 }
+
 
 .container {
     padding: 20px;
@@ -68,7 +70,7 @@ header, .navbar, .nav, .banner, .container-fluid {
     width: 100%;
     height: auto;
     display: block;
-    max-height: 300px; /* Ajusta la altura máxima del banner aquí */
+    max-height: 500px; /* Ajusta la altura máxima del banner aquí */
     object-fit: cover; /* Asegura que la imagen mantenga sus proporciones */
 }
 
