--- a/css/styles.css
+++ b/css/styles.css
@@ -348,6 +348,33 @@ footer {
         font-size: 0.7em;
     }
 }
+/*Carrito*/
+#resumen-carrito {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+    margin: auto;
+}
+#imagen-promocional {
+    background-color: #f5f5f5; /* Fondo claro para destacar la imagen */
+    padding: 20px 0; 
+    text-align: center; 
+}
+
+#imagen-promocional .img-fluid {
+    max-width: 40%; 
+    height: auto; 
+    margin: 0 auto; 
+}
+
+#imagen-promocional .rounded {
+    border-radius: 20px; 
+    box-shadow: 0 14px 16px rgba(0, 0, 0, 0.1);
+}
+
 
 .contacto {
     background: #f5f5f5;
