--- a/css/styles.css
+++ b/css/styles.css
@@ -150,23 +150,30 @@ header, .navbar, .nav {
     align-items: center;
     justify-content: center;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .pie-pagina .grupo-1 .box figure {
     width: 100%;
-    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 10px;
+    margin-inline-start: 35%;
+    padding-top: 20px; 
 }
 
 .pie-pagina .grupo-1 .box figure img {
     width: 120px;
-    box-shadow: 0px 0px .8px .8px rgba(255, 255, 255, 0.2);
+    box-shadow: 0px 0px 0.8px 0.8px rgba(255, 255, 255, 0.2);
     border-radius: 50%;
     filter: brightness(150%) contrast(150%);
+    margin: 0 auto; 
 }
+
+
+
+
 
 .pie-pagina .grupo-1 .box h6 {
     color: #fff;
